--- a/frontend/astro-planet.html
+++ b/frontend/astro-planet.html
@@ -26,9 +26,12 @@
           </div>
         </div>
       </div>
-      <div>
+      <div style="display:flex;align-items:center">
         <button id="backBtn" class="chip">← Back</button>
-        <button id="shareBtn" class="chip" style="margin-left:8px">Copy Link</button>
+        <div style="display:flex;align-items:center;margin-left:10px;gap:8px">
+          <input id="permalink" class="chip" style="padding:8px 10px;border-radius:6px;border:none;background:rgba(255,255,255,0.02);width:260px;color:#e8f0ff;font-size:13px" readonly />
+          <button id="shareBtn" class="chip">Copy</button>
+        </div>
       </div>
     </div>
 
@@ -45,9 +48,15 @@
       </div>
     </section>
 
-    <section style="margin-top:14px;background:rgba(255,255,255,0.02);padding:12px;border-radius:6px;">
-      <div id="notes" style="font-size:13px;color:var(--muted)"></div>
-      <div id="aiNote" style="margin-top:8px;background:rgba(255,255,255,0.01);padding:10px;border-radius:6px;display:none;color:#e6f0ff"></div>
+    <section style="margin-top:14px;display:grid;grid-template-columns:1fr;gap:8px;">
+      <div style="background:rgba(255,255,255,0.02);padding:12px;border-radius:6px;min-height:56px">
+        <div id="notes" style="font-size:13px;color:var(--muted)"></div>
+      </div>
+
+      <div id="aiWrap" style="background:linear-gradient(180deg,rgba(10,20,36,0.6),rgba(8,12,24,0.6));padding:12px;border-radius:6px;display:none;">
+        <div style="font-weight:700;margin-bottom:6px">AI Mentor — quick note</div>
+        <div id="aiNote" style="font-size:13px;color:#e6f0ff;white-space:pre-wrap"></div>
+      </div>
     </section>
   </div>
   <script src="/astro-planet.js"></script>
