--- a/frontend/astro-full.html
+++ b/frontend/astro-full.html
@@ -5,22 +5,29 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Astro — Full Orbit View</title>
   <style>
-    :root{--bg:#000814;--card:#001427;--muted:#7a8a97;--accent:#00e5ff;--text:#e6f0ff}
-    html,body{height:100%;margin:0;background:linear-gradient(180deg,#000814 0%, #001427 60%);color:var(--text);font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial}
-    .container{display:flex;flex-direction:column;height:100vh}
-    .header{padding:12px 20px;display:flex;align-items:center;justify-content:space-between}
-    .canvas-wrap{flex:1;display:flex;align-items:center;justify-content:center}
-    #orbitCanvas{width:100%;height:100%;display:block}
-    .table-wrap{background:linear-gradient(180deg,#001219,#001e2b);padding:12px 18px;border-top:1px solid rgba(255,255,255,0.03)}
+    :root{--bg:#000814;--card:#001219;--muted:#8fa3b3;--accent:#00dfff;--text:#f2f8ff}
+    html,body{height:100%;margin:0;background:linear-gradient(180deg,#000814 0%, #001427 65%);color:var(--text);font-family:Inter, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;-webkit-font-smoothing:antialiased}
+    body {font-size:14px}
+    .container{display:flex;flex-direction:column;height:100vh;min-height:480px}
+    .header{padding:14px 20px;display:flex;align-items:center;justify-content:space-between}
+    .canvas-wrap{flex:1 1 auto;display:flex;align-items:center;justify-content:center;position:relative;min-height:320px}
+    #orbitCanvas{width:100%;display:block;border-radius:6px}
+    .table-wrap{background:linear-gradient(180deg,#00111a,#001a24);padding:12px 18px;border-top:1px solid rgba(255,255,255,0.04);box-shadow:0 -6px 24px rgba(0,0,0,0.45)}
+    .table-wrap .section-title{font-weight:700;color:var(--text)}
     table{width:100%;border-collapse:collapse}
-    th,td{padding:8px 10px;border-bottom:1px solid rgba(255,255,255,0.03);font-size:13px;text-align:left}
-    th{color:var(--accent);font-weight:700}
+    th,td{padding:10px 12px;border-bottom:1px solid rgba(255,255,255,0.03);font-size:13px;text-align:left;color:var(--text)}
+    th{color:var(--accent);font-weight:700;border-bottom:2px solid rgba(255,255,255,0.04)}
     /* sticky header */
-    thead th{position:sticky;top:0;background:linear-gradient(180deg,rgba(0,0,0,0.3),rgba(0,0,0,0.15));backdrop-filter: blur(4px);z-index:4}
-    tbody tr:hover{background:rgba(255,255,255,0.02)}
+    thead th{position:sticky;top:0;background:linear-gradient(180deg,rgba(0,0,0,0.45),rgba(0,0,0,0.25));backdrop-filter: blur(4px);z-index:4}
+    tbody tr:hover{background:rgba(255,255,255,0.025)}
+    tbody tr td:first-child{width:48px}
     .small{font-size:12px;color:var(--muted)}
     .controls{display:flex;gap:8px;align-items:center}
-    .btn{background:#002b36;border:1px solid rgba(255,255,255,0.04);color:var(--text);padding:6px 10px;border-radius:6px;cursor:pointer}
+    .btn{background:linear-gradient(180deg,#022c33,#09333b);border:1px solid rgba(255,255,255,0.04);color:var(--text);padding:6px 10px;border-radius:6px;cursor:pointer}
+    /* make the table area fixed height so canvas can size reliably above it */
+    .table-wrap .table-scroll{overflow:auto;height:260px}
+    /* improve legibility for small text in table */
+    td.small, .small-cell{font-size:12px;color:var(--muted)}
   </style>
 </head>
 <body>
@@ -34,21 +41,22 @@
       <div class="controls">
         <input id="fullDateInput" type="date" class="btn" />
         <button id="refreshBtn" class="btn">Refresh</button>
+        <a id="openTableLink" href="/astro-table.html" target="_blank" class="btn" title="Open table in separate page">Open Table</a>
         <button id="closeBtn" class="btn">Close</button>
       </div>
     </div>
     <div class="canvas-wrap">
-      <div id="loadingOverlay" style="position:absolute;left:0;top:56px;right:0;bottom:320px;display:flex;align-items:center;justify-content:center;pointer-events:none;">
-        <div id="spinner" style="width:56px;height:56px;border-radius:50%;border:6px solid rgba(255,255,255,0.08);border-top-color:var(--accent);animation:spin 1s linear infinite"></div>
-      </div>
       <canvas id="orbitCanvas"></canvas>
+      <div id="loadingOverlay" style="position:absolute;left:20px;top:80px;right:20px;height:120px;display:flex;align-items:center;justify-content:center;pointer-events:none;">
+        <div id="spinner" style="width:56px;height:56px;border-radius:50%;border:6px solid rgba(255,255,255,0.06);border-top-color:var(--accent);animation:spin 1s linear infinite"></div>
+      </div>
     </div>
     <div class="table-wrap">
       <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:8px">
         <div style="font-weight:600">Planetary Positions</div>
         <div id="ephemTime" class="small"></div>
       </div>
-      <div style="overflow:auto;max-height:260px">
+      <div class="table-scroll">
         <table id="fullPlanetTable">
           <thead id="fullPlanetHead"></thead>
           <tbody id="fullPlanetBody"></tbody>
