--- a/frontend/astro-table.html
+++ b/frontend/astro-table.html
@@ -12,6 +12,18 @@
     table{width:100%;border-collapse:collapse}
     th,td{padding:10px 12px;border-bottom:1px solid rgba(255,255,255,0.03);font-size:14px}
     th{color:#00dfff;font-weight:700}
+      /* highlight animation for auto-scrolled row */
+      .astro-highlight {
+        animation: highlightFade 2s ease-in-out;
+        background: linear-gradient(90deg, rgba(255,230,128,0.12), rgba(255,245,200,0.06));
+        box-shadow: inset 0 0 6px rgba(255,200,60,0.06);
+      }
+
+      @keyframes highlightFade {
+        0% { background-color: rgba(255,230,128,0.22); }
+        50% { background-color: rgba(255,230,128,0.12); }
+        100% { background-color: transparent; }
+      }
   </style>
 </head>
 <body>
