ui: update helper copy to reflect icons opening table and auto-scroll

--- a/frontend/astro-table.html
+++ b/frontend/astro-table.html
@@ -31,7 +31,7 @@
     <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:12px">
       <div>
         <div style="font-weight:700;font-size:18px">Planetary Positions — Table</div>
-        <div style="font-size:13px;color:#9fb1c4">Click a colored icon to open the planet detail page</div>
+  <div style="font-size:13px;color:#9fb1c4">Click a colored icon (or use the Open Table button) — the table will open and auto-scroll to the selected planet</div>
       </div>
       <div>
         <input id="tableDate" type="date" class="btn" />
